<menu xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_select_device_bluetooth"
        android:icon="@drawable/ic_action_bluetooth_searching"
        android:orderInCategory="100"
        android:showAsAction="always"               
        android:title="@string/menu_title_bluetooth"/>
    <item
        android:id="@+id/menu_select_device_usb"
        android:icon="@drawable/ic_action_usb"
        android:orderInCategory="100"
        android:showAsAction="always"               
        android:title="@string/menu_title_usb"/>
    
    <item
        android:id="@+id/menu_switch_server_mode"
        android:icon="@drawable/ic_action_import_export"
        android:orderInCategory="100"
        android:showAsAction="always"               
        android:title="@string/menu_title_switch_server"/>
    <item
        android:id="@+id/menu_switch_analyzer_view"
        android:icon="@drawable/ic_action_view_as_list"
        android:orderInCategory="100"
        android:showAsAction="always"               
        android:title="@string/menu_title_switch_analyzer_view"/>        
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"        
        android:orderInCategory="100"
        android:showAsAction="always" 
        android:title="@string/menu_title_settings"/>    
</menu>
