<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_BTDev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_sensors_for_calibration"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/cb_accelerometers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_accelerometers" />

        <CheckBox
            android:id="@+id/cb_gyros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_gyros" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp" >
    </FrameLayout>

    <Button
        android:id="@+id/bt_calibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/bt_calibrate" />

</RelativeLayout>