<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/list_bt_bonded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp" >
        </ListView>
        
<LinearLayout
            android:id="@+id/LinearLayoutProgress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView_connState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView_BTDev"
                    android:layout_below="@+id/textView_BTDev"
                    android:text="@string/connectivity_txt_disconnected"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textView_BTDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/connectivity_txt_select_device"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>
        </LinearLayout>        

        <RelativeLayout
            android:id="@+id/RelativeLayout_Butt_Disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/bt_connectivity" />
            
        </RelativeLayout>
        

    </LinearLayout>

</LinearLayout>
